# iocc

./: Cargo.toml  LICENSE  README.md  flake.nix  rust-toolchain.toml
.github/workflows/: test.yml
src/: component.rs  lib.rs  scope.rs
src/container/: core.rs  injector.rs  mod.rs  provider_map.rs  registry.rs
src/container/context/: local.rs  mod.rs  shared.rs
src/container/injector/: mod.rs  object_map.rs
src/container/registry/: configurer.rs  implementation.rs  inner.rs  mod.rs  provider_map.rs
src/iocc/: Cargo.toml
src/iocc-derive/: Cargo.toml
src/iocc-derive/src/: attrs.rs  impls.rs  lib.rs
src/iocc/examples/: greeter.rs
src/iocc/src/: lib.rs  scope.rs
src/iocc/src/container/: core.rs  handle.rs  mod.rs
src/iocc/src/container/context/: local.rs  mod.rs  shared.rs
src/iocc/src/container/injector/: collect.rs  context.rs  mod.rs  object_map.rs  proxy.rs
src/iocc/src/container/registry/: configurer.rs  mod.rs  provider_map.rs
src/iocc/src/key/: implementation.rs  mod.rs  pattern.rs
src/iocc/src/module/: mod.rs
src/iocc/src/module/dsl/: closure_helper.rs  component_helper.rs  instance_helper.rs  metadata_helper.rs  provider_helper.rs  raw_closure_helper.rs
src/iocc/src/provider/: context.rs  instance.rs  mod.rs
src/iocc/src/provider/closure/: closure_implementation.rs  mod.rs  raw_wrapper.rs  wrapper.rs
src/iocc/src/provider/component/: mod.rs  wrapper.rs
src/iocc/src/util/: any.rs  mod.rs
src/iocc/tests/: all-attributes.rs  ui.rs
src/iocc/tests/ui/fail/: component-attribute-arguments.rs  component-attribute-arguments.stderr  component-attribute-placement.rs  component-attribute-placement.stderr  inject-attribute-invalid-return-type.rs  inject-attribute-invalid-return-type.stderr  inject-attribute-multiple-occurrences.rs  inject-attribute-multiple-occurrences.stderr  inject-attribute-no-occurrence.rs  inject-attribute-no-occurrence.stderr  inject-attribute-on-method.rs  inject-attribute-on-method.stderr
src/iocc/tests/ui/pass/: constructor-return-type.rs
src/key/: hash.rs  implementation.rs  mod.rs
src/module/: mod.rs
src/module/dsl/: closure_helper.rs  component_helper.rs  instance_helper.rs  metadata_helper.rs  mod.rs  provider_helper.rs  raw_closure_helper.rs
src/provider/: adapter.rs  closure.rs  component.rs  instance.rs  mod.rs
src/provider/closure/: closure_implementation.rs  implementation.rs  mod.rs
src/provider/component/: raw_wrapper.rs
src/util/: any.rs  mod.rs
