[workspace]
members = [
  "src/iocc",
  "src/iocc-derive",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Justin Chen oosquare@outlook.com"]
repository = "https://github.com/oosquare/iocc"

[workspace.dependencies]
mockall = "0.13.1"
oneshot = { version = "0.1.11", features = ["std"] }
parking_lot = "0.12.3"
proc-macro2 = "1.0.94"
quote = "1.0.40"
snafu = "0.8.5"
syn = { version = "2.0.100", features = ["full", "extra-traits", "visit", "visit-mut"] }
trybuild = "1.0.104"
