[package]
name = "iocc"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Minimal dependency injection framework"

[dependencies]
oneshot.workspace = true
parking_lot.workspace = true
snafu.workspace = true

[dev-dependencies]
mockall.workspace = true

