[package]
name = "iocc"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Concurrent and type-safe dependency injection framework written in Rust inspired by Spring and Guice"

[dependencies]
oneshot.workspace = true
parking_lot.workspace = true
snafu.workspace = true
iocc-derive = { path = "../iocc-derive" }

[dev-dependencies]
mockall.workspace = true
trybuild.workspace = true

